# sparrow-compute

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  environment-dev.yml  environment.yml
.github/workflows/: ci.yml  codspeed.yml
benchmarks/: README.md  bench_kernels.cpp  compare_kernels.py
cmake/: external_dependencies.cmake
examples/: demo_kernels.cpp
include/spacrow/: kernels.hpp  xtensor_adaptor.hpp
include/sparrow-compute/: arithmetic.hpp  kernels.hpp  xtensor_adaptor.hpp
tests/: test_kernels.cpp
